--- a/src/components/Section/Galery/projects.json
+++ b/src/components/Section/Galery/projects.json
@@ -3,7 +3,7 @@
         "title":"Personal Website - front-end",
         "description":"The website you are currently visiting that showcases my knowledge and experiences",
         "imageUrl":"/images/website-cover.png",
-        "git":"#",
+        "git":"https://github.com/rafsig/rafael-sigwalt-site",
         "technologies":["React", "TypeScript", "HTML", "CSS", "Styled Components"]
     }
 ]
