--- a/src/components/Section/Galery/projects.json
+++ b/src/components/Section/Galery/projects.json
@@ -11,5 +11,21 @@
             "Create backend services to support the front end",
             "Add Education section",
             "Add Certifications section"]
+    },
+    {
+        "title":"Project management system",
+        "imageUrl":"/images/project-management-cover.png",
+        "git":"https://github.com/jatinrampal/WhiteBears-Capstone",
+        "shortDescription":"Presented as captsone project as part of my Software Development and Network Engineering program, it went through the entire SDLC.",
+        "description":"This project was the development of a system to help with the flow of information and documentation between different teams during the SDLC. It included document versioning and comparisons between versions of .doc and .docx files and a flow of these documents between the team members. It was evaluated as one of the best capstones presented during that semester.",
+        "skills":["C#", "ASP/.NET","HTML", "CSS", "Project Management", "SDLC", "SQL"]
+
+    },
+    {
+        "title":"Cycle Touring Bike",
+        "shortDescription":"Presented as capstone project as part of my Mechanical Engineering program is the first contact with a full product development life cycle",
+        "description":"This project was the development of a cycle touring bike adapted to brazilian reality, and started with in depth review of the subject and requirements gathering with users. It ended with a functional prototype built to validate the solution proposed. As we progressed throught this project we face many obstacles such as difficulty to find enough users to provide requirements, time and resources contraint. Methodologies applied on this project to circunvent this project have been successfuly applied through my carreer to develop software with adaptations to the agile principles. The project was presented with a valuation of 9.5 out of 10",
+        "imageUrl":"/images/bike-cover.jpg",
+        "skills":["Project Management", "Product Development Life Cycle", "Planning"]
     }
 ]
