delete scroll indicator

--- a/src/components/Section/Galery/projects.json
+++ b/src/components/Section/Galery/projects.json
@@ -13,6 +13,17 @@
             "Add Certifications section"]
     },
     {
+        "title":"Personal Website - back-end",
+        "shortDescription":"Back-end developed to support my personal website",
+        "description":"This project, currently based on Java Spring Boot, provides the information presented on this website dynamically, allowing for the impelementaion of admin capabilities such as inserting new information without redeploying the web application.",
+        "imageUrl":"/images/personal-website-backend-cover.png",
+        "skills":["Java Spring Boot", "REST API", "AWS ECS", "AWS ALB"],
+        "nextSteps":[
+            "Add a database", 
+            "Add PUT, DELETE and UPDATE requests"
+        ]
+    },
+    {
         "title":"Project management system",
         "imageUrl":"/images/project-management-cover.png",
         "git":"https://github.com/jatinrampal/WhiteBears-Capstone",
