--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.7.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-ga": "^3.3.1",
     "react-router-dom": "^6.24.1",
     "recoil": "^0.7.7",
     "styled-components": "^6.1.11"
