--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-ga4": "^2.1.0",
     "react-router-dom": "^6.24.1",
+    "react-social-icons": "^6.18.0",
     "recoil": "^0.7.7",
     "styled-components": "^6.1.11"
   },
